--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -24,9 +24,9 @@ params:
   include_fit_to_data:
     label: "Include Model Fit Output?"
     value: TRUE
-  include_egg_to_parr_surv:
-    label: "Include Egg-to-Parr Survival Output?"
     value: TRUE
+  include_parr_recruitment:
+    label: "Include Parr Recruitment Output?"
   include_mean_length:
     label: "Include Mean Length Output?"
     value: TRUE
@@ -205,7 +205,7 @@ ylim_01 = c(0, 1.05)
 ```{r fit-to-data, child = "output-plots-children/03-fit-to-data.Rmd", eval = params$include_fit_to_data}
 ```
 
-```{r egg-to-parr-surv, child = "output-plots-children/04-egg-to-parr-surv.Rmd", eval = params$include_egg_to_parr_surv}
+```{r egg-to-parr-surv, child = "output-plots-children/04-parr-recruitment.Rmd", eval = params$include_parr_recruitment}
 ```
 
 ```{r mean-length, child = "output-plots-children/05-length.Rmd", eval = params$include_mean_length}
