--- a/03-post-process/output-plots-children/09-equiv-rates.Rmd
+++ b/03-post-process/output-plots-children/09-equiv-rates.Rmd
@@ -3,52 +3,18 @@ editor_options:
   chunk_output_type: console
 ---
 
-# Equivilency Rates {.tabset .tabset-pills}
+# Composite Rates {.tabset .tabset-dropdown}
 
-## Smolt-to-Adult Rates {.tabset .tabset-pills}
+The values reported in this section are not directly estimated quantities (i.e., do not have a prior distribution assigned), but rather composite rates that stem from combining multiple life stages together.
+In all cases, the rates were calculated by dividing the number of fish produced by the process by the number of fish that initiated the process.
 
-### LGR to LGR
+These rates are calculated through only brood year `r max(all_yrs[sar_yrs])`, since this is the last brood with of all adult ages (3, 4, and 5) accounted for in the model.
 
-This is survival from $M^{a}$ (smolt at the top of LGR by origin, NOR fish aggregated across migratory strategy type) to $R^{a}$ (adults arriving to LGR).
+## Smolt $\to$ Adult Rates {.tabset .tabset-pills}
 
-The adult portion is calculated across return years, by summing the number of adults of each age that return in the appropriate years.
-For example, the SAR for brood year 1991 uses smolt that were spawned in 1991, out-migrated in spring 1993, divided by the sum of age 3 adults in 1994, age 4 adults in 1995, and age 5 adults in 1996.
-The calculation is done for hatchery and natural origin fish separately.
-Only SARs through brood year `r max(all_yrs[sar_yrs])` are calculated, since this is the last brood with of all adult ages (3, 4, and 5) accounted for in the model.
+### BON $\to$ BON
 
-```{r adults-per-smolt, fig.width = p4_width, fig.height = p4_height}
-j = 1
-
-plot_fn = function(j) {
-  # which years had zero hatchery smolt released
-  zero_hor_smolt = post_summ(post, sub_index("Mb[year,LH_type,origin,pop]", year = sar_yrs, LH_type = i_spring, origin = o_hor, pop = j))["mean",] == 0
-  
-  # summarize rates
-  Ra_per_Ma_nor = post_summ(post, sub_index("Ra_per_Ma[year,origin,pop]", year = sar_yrs, origin = o_nor, pop = j))
-  Ra_per_Ma_hor = post_summ(post, sub_index("Ra_per_Ma[year,origin,pop]", year = sar_yrs, origin = o_hor, pop = j))
-  
-  # make hatchery values NA in year with no smolt
-  Ra_per_Ma_hor[,zero_hor_smolt] = NA
-  
-  # plot natural origin time series
-  plot_tseries(est = Ra_per_Ma_nor, yrs = all_yrs[sar_yrs], label_text = pops[j], ylim = c(0, 0.1))
-  
-  # add hatchery origin time series
-  add_tseries(est = Ra_per_Ma_hor, yrs = all_yrs[sar_yrs])
-  
-  if (j == 2) {
-    legend("topright", legend = origins, title = "Origin",
-           pch = 22, col = main_cols[c("model", "model2")], pt.cex = 2, pt.bg = tran_cols[c("model", "model2")], bty = "n", cex = 0.8)
-  }
-}
-mypar()
-junk = sapply(1:jags_data$nj, plot_fn)
-axis_labels("Brood Year", "Smolt \u2192 Adult Survival Rate")
-```
-
-### BON to BON
-
-```{r bon-to-bon, fig.width = p4_width, fig.height = p4_height}
+```{r SAR-bon-to-bon, fig.width = p4_width, fig.height = p4_height}
 plot_fn = function(j) {
   # which years had zero hatchery smolt released
   zero_hor_smolt = post_summ(post, sub_index("Mb[year,LH_type,origin,pop]", year = sar_yrs, LH_type = i_spring, origin = o_hor, pop = j))["mean",] == 0
@@ -79,9 +45,39 @@ junk = sapply(1:jags_data$nj, plot_fn)
 axis_labels("Brood Year", "Smolt \u2192 Adult Survival")
 ```
 
+### LGR $\to$ LGR
+
+```{r SAR-LGR-to-LGR, fig.width = p4_width, fig.height = p4_height}
+plot_fn = function(j) {
+  # which years had zero hatchery smolt released
+  zero_hor_smolt = post_summ(post, sub_index("Mb[year,LH_type,origin,pop]", year = sar_yrs, LH_type = i_spring, origin = o_hor, pop = j))["mean",] == 0
+  
+  # summarize rates
+  Ra_per_Ma_nor = post_summ(post, sub_index("Ra_per_Ma[year,origin,pop]", year = sar_yrs, origin = o_nor, pop = j))
+  Ra_per_Ma_hor = post_summ(post, sub_index("Ra_per_Ma[year,origin,pop]", year = sar_yrs, origin = o_hor, pop = j))
+  
+  # make hatchery values NA in year with no smolt
+  Ra_per_Ma_hor[,zero_hor_smolt] = NA
+  
+  # plot natural origin time series
+  plot_tseries(est = Ra_per_Ma_nor, yrs = all_yrs[sar_yrs], label_text = pops[j], ylim = c(0, 0.1))
+  
+  # add hatchery origin time series
+  add_tseries(est = Ra_per_Ma_hor, yrs = all_yrs[sar_yrs])
+  
+  if (j == 2) {
+    legend("topright", legend = origins, title = "Origin",
+           pch = 22, col = main_cols[c("model", "model2")], pt.cex = 2, pt.bg = tran_cols[c("model", "model2")], bty = "n", cex = 0.8)
+  }
+}
+mypar()
+junk = sapply(1:jags_data$nj, plot_fn)
+axis_labels("Brood Year", "Smolt \u2192 Adult Survival Rate")
+```
+
 ## Parr per Spawner
 
-"Spawner" means total spawners that survive pre-spawn mortality.
+"Spawner" means total adults reaching the spawning grounds that survive pre-spawn mortality.
 
 ```{r parr-per-spawner, fig.width = p4_width, fig.height = p4_height}
 plot_fn = function(j) {
@@ -95,7 +91,7 @@ axis_labels("Brood Year", "Parr per Spawner")
 
 ## Smolt per Spawner
 
-"Smolt" means total NOR smolt that survive their second winter, immediately prior to migration out of basin.
+"Smolt" means total NOR smolt immediately prior to migration out of basin.
 
 ```{r smolt-per-spawner, fig.width = p4_width, fig.height = p4_height}
 plot_fn = function(j) {
@@ -109,7 +105,7 @@ axis_labels("Brood Year", "Smolt per Spawner")
 
 ## Spawners per Spawner
 
-This is the sum of all spawners that were produced by the spawners in a given brood year (i.e., accounts for adult recruits returning across multiple ages/years). "Brood year" refers to the year the returning production was spawned. 
+This is the sum of all spawners that were produced by the spawners in a given brood year (i.e., accounts for adults from a cohort returning across multiple ages/years). "Brood year" refers to the year the returning cohort was spawned. 
 
 ```{r spawners-per-spawner, fig.width = p4_width, fig.height = p4_height}
 plot_fn = function(j) {
@@ -119,4 +115,203 @@ plot_fn = function(j) {
 mypar()
 junk = sapply(1:jags_data$nj, plot_fn)
 axis_labels("Brood Year", "Spawners per Spawner")
+```
+
+## Spawners per Adult Return {.tabset .tabset-pills}
+
+Unlike the previous figures, this figure shows the proportion of the adults that returned to the Columbia River each year (prior to any mortality on upstream migration) that ultimately spawned successfully.
+
+### Time Series {.tabset .tabset-pills}
+
+```{r spawners-per-return-fn}
+# function to calculate the survival term for a given origin, population, and combo of ages
+f = function(o, j, include_age3) {
+  # spawning adult abundance
+  Sa = post_subset(post, sub_index("^Sa[year,age,origin,pop]", year = ".+", age = ".+", origin = o, pop = j), matrix = TRUE)
+  
+  # adults at estuary
+  Rb = post_subset(post, sub_index("^Rb[year,age,origin,pop]", year = 2:33, age = ".+", origin = o, pop = j), matrix = TRUE)
+  
+  # function to calculate for a given MCMC iteration
+  g = function(i, include_age3) {
+    # put the values from this draw into the format used in the model
+    Sa_i = array_format(Sa[i,])[,,o,j]
+    Rb_i = array_format(Rb[i,])[,,o,j]
+    
+    # choose which columns to include in sum over ages
+    if (include_age3) keep_cols = 1:3 else keep_cols = 2:3
+    
+    # calculate the composite survival
+    phi_Rb_Sa_i = rowSums(Sa_i[,keep_cols], na.rm = TRUE)/rowSums(Rb_i[,keep_cols], na.rm = TRUE)
+    
+    # Inf comes from dividing by zero (i.e., the stray years)
+    # NaN comes from a dividing zero by zero (i.e., the first year)
+    phi_Rb_Sa_i[phi_Rb_Sa_i == Inf | phi_Rb_Sa_i == "NaN"] = NA
+    
+    # in some rare cases, the max() constraint produces fish
+    phi_Rb_Sa_i[phi_Rb_Sa_i > 1] = 0.99
+    as.numeric(phi_Rb_Sa_i)
+  }
+  
+  # apply to each posterior sample
+  out = t(sapply(1:nrow(Sa), g, include_age3 = include_age3))
+  
+  # set index names
+  y_ind = 1:ncol(out)
+  base_name = ifelse(include_age3, "phi_Rb_Sa", "phi_Rb_Sa_45")
+  colnames(out) = sub_index(paste0(base_name, "[year,origin,pop]"), year = y_ind, origin = o, pop = j)
+  
+  # remove NA values
+  na_ind = which(!is.na(out[1,]))
+  out[,na_ind]
+}
+
+# apply the function to all populations and ages
+out = do.call(cbind, lapply(1:jags_data$nj, function(j) {
+  cbind(f(o = o_nor, j = j, include_age3 = TRUE),
+        f(o = o_hor, j = j, include_age3 = TRUE),
+        f(o = o_nor, j = j, include_age3 = FALSE),
+        f(o = o_hor, j = j, include_age3 = FALSE)
+  )
+}))
+
+# combine with other posterior samples
+post = post_bind(post, out)
+
+# function to create the plot for one population
+plot_f = function(j, include_age3) {
+  
+  
+  param = paste0(ifelse(include_age3, "phi_Rb_Sa", "phi_Rb_Sa_45"), "[year,origin,pop]")
+  est_nor = post_summ(post, sub_index(param, year = ".+", origin = o_nor, pop = j))
+  
+  if (j != j_min) {
+    est_hor = post_summ(post, sub_index(param, year = ".+", origin = o_hor, pop = j))
+    hor_yrs = stringr::str_extract(colnames(est_hor), "\\[[0-9]+") |> stringr::str_remove("\\[") |> as.numeric()
+    missing_hor_yrs = ts_yrs[!(ts_yrs %in% hor_yrs)]
+    
+    if (length(missing_hor_yrs) > 0) {
+      est_empty = replicate(n = length(missing_hor_yrs), expr = rep(NA, 5))
+      rownames(est_empty) = rownames(est_hor)
+      est_hor = cbind(est_empty, est_hor)
+    }
+  }
+  
+  plot_tseries(est = est_nor, label_text = pops[j], yrs = all_yrs[ts_yrs], ylim = c(0,1))
+  if (j != j_min) add_tseries(est = est_hor, yrs = all_yrs[ts_yrs])
+  
+  if (j == 1) {
+    legend("topright", legend = origins, title = "Origin",
+           pch = 22, col = main_cols[c("model", "model2")], pt.cex = 2,
+           pt.bg = tran_cols[c("model", "model2")], bty = "n", cex = 0.8)
+  }
+}
+```
+
+#### All Ages {-}
+
+```{r spawners-per-return-all-ages, fig.width = p4_width, fig.height = p4_height}
+
+# loop over populations
+# includes all ages
+mypar()
+junk = sapply(1:jags_data$nj, plot_f, include_age3 = TRUE)
+axis_labels("Return Year", "Spawners per Returning Adult (All Ages)")
+```
+
+### Ages 4&5 {-}
+
+```{r spawners-per-return-old-ages, fig.width = p4_width, fig.height = p4_height}
+
+# loop over populations
+# includes only ages 4 and 5
+mypar()
+junk = sapply(1:jags_data$nj, plot_f, include_age3 = FALSE)
+axis_labels("Brood Year", "Spawners per Returning Adult (Ages 4&5)")
+```
+
+### Tables {.tabset .tabset-pills}
+
+These tables summarize the time series shown.
+The summary statistic across years was calculated for each posterior sample and the posterior means are reported.
+
+```{r spawners-per-return-table-fns}
+# function reporting across year summary stat
+# for a given origin, population, and age grouping
+f = function(o, j, include_age3, FUN, ...) {
+  if (o == o_hor & j == j_min) {
+    return(NA)
+  } else {
+    # create the parameter name to subset
+    param = paste0(ifelse(include_age3, "phi_Rb_Sa", "phi_Rb_Sa_45"), "[.+,origin,pop]")
+    
+    # extract posterior samples for this origin and population
+    samps = post_subset(post, sub_index(param, origin = o, pop = j), matrix = TRUE)
+    
+    # obtain posterior samples of the inter-annual summary statistic returned by FUN
+    stat = apply(samps, 1, FUN, ...)
+    
+    # return the posterior mean of the summary statistic returned by FUN
+    mean(stat)
+  }
+}
+
+# wrapper for f()
+# performs task for all populations, origins, and age groupings
+g = function(FUN, digits = 2, ...) {
+  
+  # summarize the posteriors
+  x = rbind(
+    sapply(1:jags_data$nj, function(j) f(o = o_nor, j = j, include_age3 = TRUE, FUN = FUN, ...)),
+    sapply(1:jags_data$nj, function(j) f(o = o_hor, j = j, include_age3 = TRUE, FUN = FUN, ...)),
+    sapply(1:jags_data$nj, function(j) f(o = o_nor, j = j, include_age3 = FALSE, FUN = FUN, ...)),
+    sapply(1:jags_data$nj, function(j) f(o = o_hor, j = j, include_age3 = FALSE, FUN = FUN, ...))
+  ) |> as.data.frame()
+  colnames(x) = pops
+
+  # add identifiers
+  tab = cbind(
+    age_type = rep(c("All Ages", "Ages 4&5"), each = 2),
+    origin_type = rep(c("NOR", "HOR"), 2),
+    round(x, digits = digits)
+  )
+  
+  # make NA values empty
+  tab[is.na(tab)] = " "
+  
+  # return the table, ready to be passed to kable
+  return(tab)
+}
+
+kable_f = function(tab) {
+  tab |>
+    kbl(format = "html", col.names = c(" ", "Origin", pops)) |>
+    kable_styling(full_width = FALSE, bootstrap_options = c("condensed", "striped")) |> 
+    column_spec(1:2, bold = TRUE) |>
+    collapse_rows(1)
+}
+```
+
+#### Inter-Annual Mean {-}
+
+```{r, spawners-per-return-table-mean}
+# posterior means of the inter-annual mean survival rate
+g(FUN = mean) |>
+  kable_f()
+```
+
+#### Inter-Annual q10 {-}
+
+```{r, spawners-per-return-table-q10}
+# posterior means of the survival value that 10% of years fall below
+g(FUN = quantile, probs = 0.1) |>
+  kable_f()
+```
+
+#### Inter-Annual q90 {-}
+
+```{r, spawners-per-return-table-mean-q90}
+# posterior means of the survival value that 90% of years fall below
+g(FUN = quantile, probs = 0.9) |>
+  kable_f()
 ```
