--- a/03-post-process/output-plots-children/13-param-summaries.Rmd
+++ b/03-post-process/output-plots-children/13-param-summaries.Rmd
@@ -17,7 +17,6 @@ my_boxplot = function(params, ylab = NULL, ticklabs = pops, ylim = NULL, boxfill
   # initialize a boxplot object
   bp = boxplot(post_sub, plot = FALSE)
   
-  
   # replace the summary stats with my preferred quantiles
   bp$stats = apply(post_sub, 2, function(x) quantile(x, c(0.025, 0.25, 0.5, 0.75, 0.975)))
   if (is.null(ylim)) ylim = make_lim(bp$stats)
@@ -26,6 +25,7 @@ my_boxplot = function(params, ylab = NULL, ticklabs = pops, ylim = NULL, boxfill
   
   axis_labels(ylab = ylab, outer = FALSE, yline = 1)
   panel_label(label_text, "topleft")
+  box(col = par("col.axis"))
 } 
 
 ref_line = function(h) {
